Replace new URL() with URI.create().toURL()